fixing spacing

--- a/src/Page_One/main.css
+++ b/src/Page_One/main.css
@@ -115,5 +115,9 @@
   .contact {
     font-size: 8px;
   }
+
+  #text {
+    margin-bottom: initial;
+  }
 }
 
